Fix navbar-brand logo image width style on safari browser

--- a/resources/sass/custom_frontend.sass
+++ b/resources/sass/custom_frontend.sass
@@ -18,5 +18,6 @@ nav.pagination
     font-weight: 400
 
 .navbar-brand
-  .image img
-    width: auto
+  .image
+      img
+        width: auto
